--- a/src/app/areas/home/details/details.component.html
+++ b/src/app/areas/home/details/details.component.html
@@ -1,5 +1,5 @@
 <div class="modal" id="modalDetails" tabindex="-1" data-keyboard="false" role="dialog" data-toggle="modal" data-backdrop="static">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -8,9 +8,10 @@
       <div class="modal-body">
 
         <form class="col-xs-12" novalidate [formGroup]="formJogoDetails">
+
           <div class="row">
-            <div class="col-xs-12">
-              <div class="form-group label-floating is-empty">
+            <div class="col-xs-4">
+              <div class="form-group">
                 <label for="ddlMercados" class="control-label">Escolha o mercado</label>
                 <select id="ddlMercados" class="form-control" type="number" formControlName="MercadoID">
                     <option *ngFor="let item of mercados" [ngValue]="item.mercadoID">
@@ -20,27 +21,53 @@
                 <display-validation [control]="formJogoDetails.controls.MercadoID"></display-validation>
               </div>
             </div>
-          </div>
 
-          {{ formJogoDetails.value | json }}
-
-          <div class="row">
-            <div class="col-xs-6">
-              <div class="form-group label-floating is-empty">
+            <div class="col-xs-4">
+              <div class="form-group">
                 <label for="txtOdds" class="control-label">Odds</label>
                 <input type="text" class="form-control" id="txtOdds" formControlName="Odds" />
                 <display-validation [control]="formJogoDetails.controls.Odds"></display-validation>
               </div>
             </div>
-            <div class="col-xs-6">
-              <div class="form-group label-floating is-empty">
+            <div class="col-xs-4">
+              <div class="form-group">
                 <label for="txtValor" class="control-label">Valor</label>
                 <input type="text" class="form-control" id="txtValor" formControlName="Valor" />
                 <display-validation [control]="formJogoDetails.controls.Valor"></display-validation>
               </div>
             </div>
           </div>
+
         </form>
+
+        <div class="row">
+          <div class="col-xs-12">
+            <fieldset>
+              <legend>Lista de palpites</legend>
+
+              <table class="table table-striped table-hover ">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Column heading</th>
+                    <th>Column heading</th>
+                    <th>Column heading</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>Column content</td>
+                    <td>Column content</td>
+                    <td>Column content</td>
+                  </tr>
+                </tbody>
+              </table>
+            </fieldset>
+          </div>
+        </div>
+
+        {{ formJogoDetails.value | json }}
 
       </div>
       <div class="modal-footer">
